# pokedex-rust

./: Cargo.toml  pokemon.json
src/: main.rs
