[package]
name = "pokedex-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }
egui = "0.22.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
# tokio = { version = "1.29.1", features = ["full"] } // use if want async await syntax
